update config file

--- a/src/_includes/_default.html
+++ b/src/_includes/_default.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if pageTitle %}
+    {% if metainfo.pageTitle %}
         <title>
-            {{pageTitle}}
+            {{metainfo.pageTitle}}
         </title>    
     {% endif %}
-    {% if pageDescription %}
-        <meta name="description" content="{{pageDescription}}"/>
+    {% if metainfo.pageDescription %}
+        <meta name="description" content="{{metainfo.pageDescription}}"/>
     {% endif %}
     {% block head %}{% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
