--- a/src/_includes/_default.html
+++ b/src/_includes/_default.html
@@ -5,9 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-        <title>
-            {{title}}
-        </title>    
+      <title>
+        {{ title }}{{ settings.SEO.separator }}{{ settings.SEO.site_name }}
+      </title>
     {% endif %}
     {% if description %}
         <meta name="description" content="{{description}}"/>
